cmake_minimum_required(VERSION 3.16...4.0)

if(POLICY CMP0167)
    cmake_policy(SET CMP0167 OLD)
endif()

project(clambback VERSION 1.0.0 LANGUAGES CXX)

set(CLAMBBACK_VERSION "1.0.0-alpha.3")
set(CLAMBBACK_NATIVE_PACKAGE_VERSION "1.0.0~alpha.3")

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

file(GLOB_RECURSE CPP_LIST CONFIGURE_DEPENDS src/*.cpp)

add_executable(clambback ${CPP_LIST})
target_include_directories(clambback PRIVATE src)

target_compile_options(clambback PRIVATE -Wall -Wextra)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(clambback PRIVATE Threads::Threads)

find_package(Boost 1.66.0 REQUIRED COMPONENTS program_options)
if(TARGET Boost::headers)
    target_link_libraries(clambback PRIVATE Boost::headers)
else()
    target_include_directories(clambback PRIVATE ${Boost_INCLUDE_DIR})
endif()
if(TARGET Boost::program_options)
    target_link_libraries(clambback PRIVATE Boost::program_options)
else()
    target_link_libraries(clambback PRIVATE ${Boost_LIBRARIES})
endif()
find_library(BOOST_SYSTEM_LIBRARY NAMES boost_system HINTS ${Boost_LIBRARY_DIRS} ${Boost_LIBRARY_DIR_RELEASE} ${Boost_LIBRARY_DIR_DEBUG})
if(BOOST_SYSTEM_LIBRARY)
    target_link_libraries(clambback PRIVATE ${BOOST_SYSTEM_LIBRARY})
endif()

find_package(OpenSSL 1.1.0 REQUIRED)
target_link_libraries(clambback PRIVATE OpenSSL::SSL OpenSSL::Crypto)
if(OPENSSL_VERSION VERSION_GREATER_EQUAL 1.1.1)
    option(ENABLE_SSL_KEYLOG "Build with SSL KeyLog support" ON)
    if(ENABLE_SSL_KEYLOG)
        target_compile_definitions(clambback PRIVATE ENABLE_SSL_KEYLOG)
    endif()

    option(ENABLE_TLS13_CIPHERSUITES "Build with TLS 1.3 ciphersuites support" ON)
    if(ENABLE_TLS13_CIPHERSUITES)
        target_compile_definitions(clambback PRIVATE ENABLE_TLS13_CIPHERSUITES)
    endif()
endif()

option(ENABLE_MYSQL "Build with MySQL support" OFF)
if(ENABLE_MYSQL)
    find_package(MySQL REQUIRED)
    target_include_directories(clambback PRIVATE ${MYSQL_INCLUDE_DIR})
    target_link_libraries(clambback PRIVATE ${MYSQL_LIBRARIES})
    target_compile_definitions(clambback PRIVATE ENABLE_MYSQL)
endif()

option(FORCE_TCP_FASTOPEN "Force build with TCP Fast Open support" OFF)
if(FORCE_TCP_FASTOPEN)
    target_compile_definitions(clambback PRIVATE TCP_FASTOPEN=23 TCP_FASTOPEN_CONNECT=30)
endif()

if(CMAKE_SYSTEM_NAME STREQUAL Linux)
    option(ENABLE_NAT "Build with NAT support" ON)
    if(ENABLE_NAT)
        target_compile_definitions(clambback PRIVATE ENABLE_NAT)
    endif()

    option(ENABLE_REUSE_PORT "Build with SO_REUSEPORT support" ON)
    if(ENABLE_REUSE_PORT)
        target_compile_definitions(clambback PRIVATE ENABLE_REUSE_PORT)
    endif()
endif()

if(APPLE)
    find_library(CoreFoundation CoreFoundation REQUIRED)
    find_library(Security Security REQUIRED)
    target_link_libraries(clambback PRIVATE ${CoreFoundation} ${Security})
endif()

include(GNUInstallDirs)

set(SYSTEMD_SERVICE AUTO CACHE STRING "Install systemd service")
set_property(CACHE SYSTEMD_SERVICE PROPERTY STRINGS AUTO ON OFF)
set(SYSTEMD_SERVICE_PATH /lib/systemd/system CACHE PATH "Systemd service path")
if(SYSTEMD_SERVICE STREQUAL AUTO)
    if(EXISTS /usr/lib/systemd/system)
        set(SYSTEMD_SERVICE ON)
        set(SYSTEMD_SERVICE_PATH /usr/lib/systemd/system CACHE PATH "Systemd service path" FORCE)
    elseif(EXISTS /lib/systemd/system)
        set(SYSTEMD_SERVICE ON)
        set(SYSTEMD_SERVICE_PATH /lib/systemd/system CACHE PATH "Systemd service path" FORCE)
    else()
        set(SYSTEMD_SERVICE OFF)
    endif()
endif()

set(DEFAULT_CONFIG ${CMAKE_INSTALL_FULL_SYSCONFDIR}/clambback/config.json CACHE STRING "Default config path")
target_compile_definitions(clambback PRIVATE DEFAULT_CONFIG="${DEFAULT_CONFIG}")

option(INSTALL_DEFAULT_CONFIG "Install the default config file" ON)

install(TARGETS clambback RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
if(INSTALL_DEFAULT_CONFIG)
    install(FILES examples/server.json-example DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/clambback RENAME config.json)
endif()
install(FILES docs/clambback.1 DESTINATION ${CMAKE_INSTALL_MANDIR}/man1)
install(DIRECTORY examples/ DESTINATION ${CMAKE_INSTALL_DOCDIR}/examples FILES_MATCHING PATTERN "*.json-example" PATTERN "*.toml-example")
install(FILES LICENSE NOTICE DESTINATION ${CMAKE_INSTALL_DOCDIR})

if(SYSTEMD_SERVICE STREQUAL ON)
    set(CONFIG_NAME config)
    configure_file(examples/clambback.service-example clambback.service @ONLY)
    set(CONFIG_NAME %i)
    configure_file(examples/clambback.service-example clambback@.service @ONLY)
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/clambback.service ${CMAKE_CURRENT_BINARY_DIR}/clambback@.service DESTINATION ${SYSTEMD_SERVICE_PATH})
endif()

enable_testing()
add_test(NAME LinuxSmokeTest-basic
         COMMAND bash ${CMAKE_CURRENT_SOURCE_DIR}/tests/LinuxSmokeTest/basic.sh ${CMAKE_CURRENT_BINARY_DIR}/clambback)
add_test(NAME LinuxSmokeTest-fake-client
         COMMAND bash ${CMAKE_CURRENT_SOURCE_DIR}/tests/LinuxSmokeTest/fake-client.sh ${CMAKE_CURRENT_BINARY_DIR}/clambback)
set_tests_properties(LinuxSmokeTest-fake-client PROPERTIES DEPENDS "LinuxSmokeTest-basic")
add_test(NAME ClambhookCompatibility
         COMMAND bash ${CMAKE_CURRENT_SOURCE_DIR}/tests/ClambhookCompat/clambhook-compat.sh ${CMAKE_CURRENT_BINARY_DIR}/clambback)
set_tests_properties(ClambhookCompatibility PROPERTIES SKIP_RETURN_CODE 77)

set(CPACK_PACKAGE_NAME clambback)
set(CPACK_PACKAGE_VENDOR "JohnThre")
set(CPACK_PACKAGE_CONTACT "JohnThre")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "C++ network service with TLS transport support")
set(CPACK_PACKAGE_VERSION ${CLAMBBACK_VERSION})
set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/JohnThre/clambback")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CPACK_SET_DESTDIR ON)
set(CPACK_GENERATOR "TGZ;RPM")
set(CPACK_RPM_FILE_NAME RPM-DEFAULT)
set(CPACK_RPM_PACKAGE_LICENSE "GPL-3.0-or-later")
set(CPACK_RPM_PACKAGE_GROUP "Applications/Internet")
set(CPACK_RPM_PACKAGE_AUTOREQ ON)
set(CPACK_RPM_PACKAGE_RELOCATABLE OFF)
set(CPACK_RPM_PACKAGE_VERSION ${CLAMBBACK_NATIVE_PACKAGE_VERSION})
include(CPack)
